--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -5,16 +5,14 @@
    "metadata": {},
    "source": [
     "Todo:\n",
-    "- Add all prediction apps, update URLs below\n",
-    "- Ensure prediction apps have clear visualizations\n",
-    "- Double check input/output files and example output format are correct!\n",
+    "- X Add all prediction apps, update URLs below\n",
+    "- X Ensure prediction apps have clear visualizations\n",
+    "- X Double check input/output files and example output format are correct!\n",
     "- AntibodyProfiler: Accept HLT format PDB files, antigen chain\n",
+    "- New BioLib app: chotia_to_hlt for choosing own target and antibody framework\n",
     "- Stress-test servers, spin up capacity before workshop\n",
     "\n",
     "Nice to have:\n",
-    "- Add previously computed examples to visualize on BioLib.com\n",
-    "- New BioLib app: chotia_to_hlt for choosing own target and antibody framework\n",
-    "- Antibody liability app\n",
     "- Leaderboard\n",
     "- \"Master\" BioLib app implementing all functionality in one app (easier to parallelize)"
    ]
@@ -32,16 +30,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, you may choose your own antibody framework and target protein structure, and design novel antibody binders. This workflow has been shown to generate weak antibody binders in the μM to nM range, with up to ~5-10% experimental success rates for some degree of binding.\n",
+    "In this notebook, you may choose your own antibody framework and target protein structure, and design novel antibody binders. This workflow has been shown to generate weak antibody binders in the μM to nM range, with up to ~5-10% experimental success rates for some degree of binding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "---\n",
-    "\n",
+    "---\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Antibody therapeutics represent a substantial market (approximately $550M USD) with tremendous potential for treating various diseases. Traditional approaches to antibody discovery are slow and laborious, typically involving immunizing mice or screening random libraries. \n",
     "\n",
     "This notebook implements the RFantibody pipeline for structure-based design of de novo antibodies against a chosen target.\n",
     "\n",
-    "It takes two inputs:\n",
-    "- i) An input antibody framework (e.g. hu-4D5-8_Fv.pdb - a humanized single-domain antibody already approved in two FDA therapies)\n",
+    "This workflow only requires two inputs:\n",
+    "- i) An input antibody framework (e.g. hu-4D5-8_Fv.pdb - a humanized ScFv antibody framework PDB\n",
     "- ii) A target protein of interest (e.g. respiratory syncytial virus (RSV) protein) with binding site (epitope residues)\n",
     "\n",
     "And runs the following three methods:\n",
@@ -49,18 +58,27 @@
     "2. **Design of the CDR loop residues** - using ProteinMPNN ([Science paper](https://www.science.org/doi/10.1126/science.add2187))\n",
     "3. **Filtering designs on predicted structure 'self-consistency'** - using an antibody-finetuned version of RoseTTAFold2 ([Preprint](https://www.biorxiv.org/content/10.1101/2023.05.24.542179v1)), shown to correlate with significantly improved experimental success rates.\n",
     "\n",
-    "The RFantibody pipeline itself is described in detail in [this preprint](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2).\n",
-    "\n",
-    "Advantages:\n",
+    "The RFantibody pipeline itself is described in detail in [this preprint](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Advantages:**\n",
     "- Designs novel antibodies binding a target protein\n",
     "- Can target most epitope binding region of interest (preferring structured regions)\n",
     "- Focuses on designing antibody CDR loops (main residues determining binding)\n",
     "- Designs may be filtered by \"self-cosistency\" of predicted structures, correlating with experimental success rates\n",
     "\n",
-    "Current limitations:\n",
+    "**Current limitations:**\n",
     "- Generated antibodies at best tend to be weak binders (low binding affinities in μM to nM range)\n",
     "- Often low experimental success rates (~5-10% for some degree of binding) - heavily dependent on filtering\n",
-    "- No screening for e.g. human immunogenicity"
+    "- No screening for e.g. human immunogenicity\n",
+    "\n",
+    "**Read more:**\n",
+    "- To read more about this workflow, please refer to the RFAntibody Github page: https://github.com/RosettaCommons/RFantibody/blob/main/README.md\n",
+    "- And the Biorxiv pre-print by Bennett et al 2024: https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2"
    ]
   },
   {
@@ -117,12 +135,9 @@
     "#### ii) Set input antibody and target PDB\n",
     "We're working with two primary input files for RFAntibody:\n",
     "\n",
-    "1. **framework_pdb**: `hu-4D5-8_Fv.pdb` - A humanized single domain antibody (VHH) framework\n",
+    "1. **framework_pdb**: `hu-4D5-8_Fv.pdb` - A humanized ScFv antibody Framework\n",
     "2. **target_pdb**: `rsv_site3.pdb` - The target protein (RSV site 3) of interest\n",
     "3. List of hotspot residues defining our epitope (target binding site)\n",
-    "\n",
-    "You may also choose your own antibody framework and target PDB, prepared with this script:\n",
-    "https://github.com/RosettaCommons/RFantibody?tab=readme-ov-file#input-preparation\n",
     "\n",
     "Let's verify that these files exists."
    ]
@@ -167,7 +182,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1 of 4: Generate antibody-antigen docking pose, with [RFDiffusion (antibody-finetuned)](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
+    "#### iii) Bring your own target (optional) \n",
+    "You may also choose your own antibody framework and target PDB, prepared with this script:\n",
+    "https://github.com/RosettaCommons/RFantibody?tab=readme-ov-file#input-preparation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1 of 4: Generate antibody-antigen docking pose, with [RFDiffusion (antibody-finetuned)](https://biolib.com/BioITWorkshop/RFDiffusionAntibody)\n",
     "*Estimated time: ~2-3 minutes*\n",
     "\n",
     "This step takes the input antibody framework and target protein, and designs the 3D structure of new CDR loops in interaction with the target protein (antibody-antigen docking pose). The CDR loops will be generated as backbones only (no residues), with the actual residues to be determined in the next step."
@@ -177,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
+    "#### [RFDiffusion input parameters](https://biolib.com/BioITWorkshop/RFDiffusionAntibody)\n",
     "\n",
     "Already set above:\n",
     "- **framework_pdb**: Path to the antibody framework we're using (e.g. hu-4D5-8_Fv.pdb)\n",
@@ -280,12 +305,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2 of 4: Design binding CDR loop residues with [ProteinMPNN](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
+    "## Step 2 of 4: Design binding CDR loop residues with [ProteinMPNN](https://biolib.com/BioITWorkshop/ProteinMPNNAb)\n",
     "*Estimated time: <1 minute*\n",
     "\n",
     "The second step takes the docks generated by RFdiffusion and assigns amino acid sequences to the CDR loops using ProteinMPNN. We use the base version of ProteinMPNN (not an antibody-finetuned model) with a wrapper script that focuses on designing just the CDR loops.\n",
     "\n",
-    "#### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
+    "#### [ProteinMPNN input parameters](https://biolib.com/BioITWorkshop/ProteinMPNNAb)\n",
     "- **pdb**: Directory containing the previous RFdiffusion output PDB files, or a single PDB file"
    ]
   },
@@ -374,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3 / 4: Filter designs for predicted structure self-consistency, with [RosettaFold2 antibody fine-tuned](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
+    "## Step 3 / 4: Filter designs for predicted structure self-consistency, with [RosettaFold2 antibody fine-tuned](https://biolib.com/BioITWorkshop/RF2Antibody)\n",
     "*Estimated time: ~1-2 minutes*\n",
     "\n",
     "The final step uses an antibody-finetuned version of RoseTTAFold2 (RF2) to predict the structure of the designed sequences and assess whether RF2 is confident that the sequence will bind as designed.\n",
@@ -383,7 +408,7 @@
     "- RF2 predicted alignment error (pAE) < 10\n",
     "- RMSD between design and RF2 prediction < 2Å for the CDRs\n",
     "\n",
-    "### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
+    "### [RosettaFold2 input parameters](https://biolib.com/BioITWorkshop/RF2Antibody)\n",
     "\n",
     "- **input.pdb_dir**: Directory containing the PDB files from ProteinMPNN\n",
     "- **num_recycles**: Number of recycling iterations in the model (default: 10)\n",
@@ -499,8 +524,8 @@
     "Here, we will use our in-house AntibodyProfiler tool to assess our antibody PDBs for how closely they relate to molecular properties of already approved therapeutic antibodies. Antibody designs outside this range may indicate higher risk of pharmaceutical liabilities, providing another early filtering step before designs are sent to the lab for experimental validation.\n",
     "\n",
     "We recommend selecting designs within 2-sigma deviation of approved antibodies for the following metrics:\n",
-    "- Total CDR length between X and Y \n",
-    "- CDR3 heavy chain length between X and Y \n",
+    "- Total CDR length between 39-60 residues\n",
+    "- CDR3 heavy chain length between 5-23 residues\n",
     "- Patches of surface hydrophobicity in CDR vicinity (PSH) between X and Y \n",
     "- Patches of positive charge in CDR vicinity (PPC) between X and Y\n",
     "- Patches of negative charge in CDR vicinity (PNC) between X and Y \n",
@@ -508,9 +533,7 @@
     "\n",
     "### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
     "\n",
-    "- **input.pdb_dir**: Directory containing the PDB files from ProteinMPNN\n",
-    "- **num_recycles**: Number of recycling iterations in the model (default: 10)\n",
-    "- **hotspot**: Percentage of hotspots provided to the model (default: 10%)"
+    "- **pdb**: Directory containing the PDB files from ProteinMPNN"
    ]
   },
   {
