--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -512,7 +512,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4 of 4: Assess designs for pharmaceutical liabilities (AntibodyProfiler)"
+    "## Step 4 of 4: Assess designs for pharmaceutical liabilities with [AntibodyProfiler](https://biolib.com/BioLibDevelopment/AntibodyProfiler/)"
    ]
   },
   {
@@ -526,12 +526,9 @@
     "We recommend selecting designs within 2-sigma deviation of approved antibodies for the following metrics:\n",
     "- Total CDR length between 39-60 residues\n",
     "- CDR3 heavy chain length between 5-23 residues\n",
-    "- Patches of surface hydrophobicity in CDR vicinity (PSH) between X and Y \n",
-    "- Patches of positive charge in CDR vicinity (PPC) between X and Y\n",
-    "- Patches of negative charge in CDR vicinity (PNC) between X and Y \n",
-    "- Structural fragment variable charge symmetry parameter (SFvCSP) between X and Y\n",
+    "- Patches of surface hydrophobicity in CDR vicinity (PSH) between 30-150\n",
     "\n",
-    "### [Input parameters](https://biolib.com/BioLibDevelopment/prediction-app/)\n",
+    "### [AntibodyProfiler input parameters](https://biolib.com/BioLibDevelopment/AntibodyProfiler/)\n",
     "\n",
     "- **pdb**: Directory containing the PDB files from ProteinMPNN"
    ]
