--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -95,6 +95,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<img src=\"img/whiteboard4.jpg\" style=\"width:70%;\">"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "yd-TURr3hCJL"
       },
@@ -119,23 +126,13 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "NyBRznjZhCJL",
-        "outputId": "e6d91fe4-7e27-424c-c00b-b0510caced8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NyBRznjZhCJL",
+        "outputId": "e6d91fe4-7e27-424c-c00b-b0510caced8b"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m155.7/155.7 kB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m147.8/147.8 kB\u001b[0m \u001b[31m7.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Download BioLib\n",
         "!pip install --quiet --upgrade pybiolib"
@@ -145,37 +142,19 @@
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
-        "id": "hpZtb9ewhCJL",
-        "outputId": "20567a35-45ee-4ea1-e150-ab536ca9fa8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        }
+        },
+        "id": "hpZtb9ewhCJL",
+        "outputId": "20567a35-45ee-4ea1-e150-ab536ca9fa8d"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
-          "text": [
-            "Opening authorization page at: https://biolib.com/sign-in/request/notebook/?token=ReVw3OivmBOBlqhp\n",
-            "If your browser does not open automatically, click on the link above.\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": []
-          },
-          "metadata": {}
-        },
-        {
           "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "Successfully signed in!\n"
+            "2025-03-31 11:26:18,087 | INFO : Already signed in\n"
           ]
         }
       ],
@@ -262,35 +241,42 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import os\n",
-        "framework_pdb = \"hu-4D5-8_Fv.pdb\"\n",
-        "target_pdb = \"rsv_site3.pdb\"\n",
-        "hotspot_res = \"[T305,T456]\"\n",
-        "print(f\"Framework PDB exists: {os.path.exists(framework_pdb)}\")\n",
-        "print(f\"Target PDB exists: {os.path.exists(target_pdb)}\")\n",
-        "print(f\"(If these are missing, please download from https://github.com/mhoie/bioit-rfantibody before proceeding)\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "BKVVCyQNsiZt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# RFDiffusion input\n",
+        "framework_pdb = \"hu-4D5-8_Fv.pdb\"\n",
+        "target_pdb = \"rsv_site3.pdb\"\n",
+        "hotspot_res = \"[T305,T456]\"'\n",
+        "\n",
+        "# RFDiffusion parameters\n",
+        "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
+        "num_designs = 1\n",
+        "\n",
+        "# Check that everything present\n",
+        "import os\n",
+        "print(f\"Framework PDB exists: {os.path.exists(framework_pdb)}\")\n",
+        "print(f\"Target PDB exists: {os.path.exists(target_pdb)}\")\n",
+        "print(f\"(If these are missing, please download from https://github.com/mhoie/bioit-rfantibody before proceeding)\")"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": 16,
       "metadata": {
-        "id": "s6CU5W0OhCJL",
-        "outputId": "236dadd4-5ad4-4698-c448-d93922984c16",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s6CU5W0OhCJL",
+        "outputId": "236dadd4-5ad4-4698-c448-d93922984c16"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/RFDiffusionAntibody:0.0.2\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/5fb1dfeb-fc93-490e-a5f2-7cd5f683e950/\n"
@@ -298,19 +284,18 @@
         }
       ],
       "source": [
-        "# Input parameters (antibody framework and target PDBs are set above)\n",
-        "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
-        "num_designs = 1\n",
         "\n",
         "# Run RFdiffusion through BioLib\n",
         "app_rfdiff = biolib.load('BioITWorkshop/RFDiffusionAntibody')  # Replace with actual RFantibody app ID\n",
-        "job_rfdiff = app_rfdiff.start(\n",
+        "job_rfdiff = app_rfdiff.run(\n",
         "    target_pdb=target_pdb,\n",
         "    framework_pdb=framework_pdb,\n",
         "    hotspot_res=hotspot_res,\n",
         "    design_loops=design_loops,\n",
         "    num_designs=num_designs,\n",
-        ")"
+        ")\n",
+        "job_rfdiff.save_files(\"output/rfdiffusion\", skip_file_if_exists=True)\n",
+        "job_rfdiff.list_output_files()"
       ]
     },
     {
@@ -343,16 +328,16 @@
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
-        "id": "l8MUkmJthCJL",
-        "outputId": "ff646f02-c742-4668-c6b2-79db01f10878",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "l8MUkmJthCJL",
+        "outputId": "ff646f02-c742-4668-c6b2-79db01f10878"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Saving 4 files to output/rfdiffusion...\n"
           ]
@@ -363,8 +348,8 @@
         "if job_rfdiff.is_pending():\n",
         "    print(\"Job is still running...\")\n",
         "else:\n",
-        "    job_rfdiff.save_files(\"output/rfdiffusion\", skip_file_if_exists=True)\n",
-        "    job_rfdiff.list_output_files()"
+        "    \n",
+        "    "
       ]
     },
     {
@@ -387,16 +372,16 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "AfmUon9ThCJM",
-        "outputId": "0aba660b-c8f0-41af-9628-5b2e293d6d63",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AfmUon9ThCJM",
+        "outputId": "0aba660b-c8f0-41af-9628-5b2e293d6d63"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNNAb:0.0.3\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/7870dc6f-0e88-4c28-a602-cfcf9990791f/\n"
@@ -409,10 +394,12 @@
         "\n",
         "# Run ProteinMPNN\n",
         "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNNAb')\n",
-        "job_mpnn = app_mpnn.start(\n",
+        "job_mpnn = app_mpnn.run(\n",
         "    pdb=input_dir,\n",
         "    num_seqs_per_struct=3\n",
-        ")"
+        ")\n",
+        "job_mpnn.save_files(\"output/proteinmpnn\", skip_file_if_exists=True)\n",
+        "job_mpnn.list_output_files()"
       ]
     },
     {
@@ -445,23 +432,23 @@
       "cell_type": "code",
       "execution_count": 19,
       "metadata": {
-        "id": "Dap8bLxAhCJM",
-        "outputId": "00ab2151-75bb-467d-d1c3-0a9e5d227090",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Dap8bLxAhCJM",
+        "outputId": "00ab2151-75bb-467d-d1c3-0a9e5d227090"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Saving 3 files to output/proteinmpnn...\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Skipping output/proteinmpnn/_0_dldesign_0.pdb as a file with that name already exists locally.\n",
             "Skipping output/proteinmpnn/_0_dldesign_1.pdb as a file with that name already exists locally.\n",
@@ -474,9 +461,7 @@
         "# Download job results when done\n",
         "if job_mpnn.is_pending():\n",
         "    print(\"Job is still running...\")\n",
-        "else:\n",
-        "    job_mpnn.save_files(\"output/proteinmpnn\", skip_file_if_exists=True)\n",
-        "    print(job_mpnn.list_output_files())"
+        "else:\n"
       ]
     },
     {
@@ -504,16 +489,16 @@
       "cell_type": "code",
       "execution_count": 20,
       "metadata": {
-        "id": "PjZ8w1kChCJM",
-        "outputId": "0efaafbe-8653-4e85-bf6c-51cdae2f2700",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PjZ8w1kChCJM",
+        "outputId": "0efaafbe-8653-4e85-bf6c-51cdae2f2700"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/RF2Antibody:0.0.3\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/a4de66df-5bdd-4ff5-b7e5-3680ece86287/\n"
@@ -526,7 +511,7 @@
         "\n",
         "# Run RosettaFold2\n",
         "app_rf2 = biolib.load('BioITWorkshop/RF2Antibody')  # Replace with actual app ID\n",
-        "job_rf2 = app_rf2.start(\n",
+        "job_rf2 = app_rf2.run(\n",
         "    pdb=input_dir,\n",
         "    num_recycles=3,\n",
         ")"
@@ -565,16 +550,16 @@
       "cell_type": "code",
       "execution_count": 21,
       "metadata": {
-        "id": "iMwURoBfhCJM",
-        "outputId": "ae4a2561-4d62-40b6-a6c8-85a184aed91c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iMwURoBfhCJM",
+        "outputId": "ae4a2561-4d62-40b6-a6c8-85a184aed91c"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Job is still running...\n"
           ]
@@ -622,16 +607,16 @@
       "cell_type": "code",
       "execution_count": 11,
       "metadata": {
-        "id": "JJu9BepqhCJM",
-        "outputId": "be06ab4f-202a-48e0-b253-5563ddb94222",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JJu9BepqhCJM",
+        "outputId": "be06ab4f-202a-48e0-b253-5563ddb94222"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioLibDevelopment/AntibodyProfiler:0.0.32\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/60b04ed8-db70-4373-ae9c-e01eedd9e346/\n"
@@ -680,16 +665,16 @@
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
-        "id": "R_l9Ec9xhCJM",
-        "outputId": "41e7cfab-ced2-40b8-dc2e-1028ff72a0db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "R_l9Ec9xhCJM",
+        "outputId": "41e7cfab-ced2-40b8-dc2e-1028ff72a0db"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Job is still running...\n"
           ]
@@ -726,15 +711,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "3ESnZr39rdTR"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "base",
       "language": "python",
@@ -751,9 +739,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.12.4"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
